[gd_scene load_steps=6 format=3 uid="uid://dbumgsr5lfkq6"]

[ext_resource type="Script" path="res://_splash screen/splash_screen.gd" id="1_op7rn"]
[ext_resource type="Texture2D" uid="uid://diwvhh0wm4mwy" path="res://_splash screen/splash_screen.png" id="1_v4y8u"]
[ext_resource type="PackedScene" uid="uid://bajuyj47rtn7y" path="res://scenes/mainMenu.tscn" id="2_i15r6"]
[ext_resource type="AudioStream" uid="uid://k2lwmmyb3qtj" path="res://assets/sounds/deep strange.mp3" id="3_5oqsw"]
[ext_resource type="FontFile" uid="uid://pk2ycsnxiydh" path="res://assets/fonts/pcsenior.ttf" id="4_p1k42"]

[node name="Control" type="Control" node_paths=PackedStringArray("splash_screen")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_op7rn")
menu_scene = ExtResource("2_i15r6")
splash_screen = NodePath("CenterContainer/TextureRect")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
texture = ExtResource("1_v4y8u")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_5oqsw")
autoplay = true

[node name="CenterContainer2" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ErrorLabel" type="Label" parent="CenterContainer2"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("4_p1k42")
theme_override_font_sizes/font_size = 24
text = "You need to have Steam open in order to play the game!"

[node name="QuitButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -124.0
offset_top = -192.0
offset_right = 124.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_p1k42")
theme_override_font_sizes/font_size = 24
text = "Leave Game"

[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
